// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`f:l 1`] = `
Array [
  Object {
    "prop": "f",
    "raw": "f:l",
    "val": "l",
  },
]
`;

exports[`p 1`] = `
Array [
  Object {
    "prop": "p",
    "raw": "p",
    "val": "",
  },
]
`;

exports[`p:5:5:5 1`] = `
Array [
  Object {
    "prop": "p",
    "raw": "p:5:5:5",
    "val": "5:5:5",
  },
]
`;

exports[`p5:5 1`] = `
Array [
  Object {
    "prop": "p",
    "raw": "p5:5",
    "val": "5:5",
  },
]
`;

exports[`poa: 1`] = `
Array [
  Object {
    "prop": "poa",
    "raw": "poa:",
    "val": "",
  },
]
`;

exports[`w20 1`] = `
Array [
  Object {
    "prop": "w",
    "raw": "w20",
    "val": "20",
  },
]
`;
